2006-10-18  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/games.c (igraph_erdos_renyi_game_gnp) : bug corrected,
	use igraph_real_t, long int is not enough

2006-10-10  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/attributes.h : corrected a typo
	* interfaces/python/igraphmodule.c
	(igraphmodule_i_attribute_add_vertices)
	(igraphmodule_i_attribute_add_edges) : added attr parameter support
	* interfaces/python/test.py : extended NCOL test case
	* src/type_indexededgelist.c (igraph_add_vertices) :
	moved invocation of attribute handler to the end
	
2006-10-10  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/flow.c (igraph_maxflow_value) : range check bug corrected
	(igraph_st_mincut_value) : check source==target
	(igraph_i_mincut_value_undirected) : remove unneeded directedness check
	(igraph_i_st_vertex_connectivity_directed) : correct neighbor check
	(igraph_i_st_vertex_connectivity_undirected) : add range check
	(igraph_st_vertex_connectivity) : check source==target
	(igraph_st_edge_connectivity) : check source==target
	(igraph_edge_disjoint_paths) : rewritten (unnecessarily)
	(igraph_vertex_disjoint_paths) : rewritten

2006-10-08  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign-graphml.c (igraph_i_xml_escape) : change ENOMEM to
	IGRAPH_ENOMEM

	* src/conversion.c (igraph_to_directed) : bug eliminated,
	destroy order was different than FINALLY order

	* src/flow.c (igraph_i_maxflow_value_undirected, igraph_maxflow_value)
	(igraph_st_mincut_value, igraph_i_mincut_value_undirected)
	(igraph_mincut_value, igrpah_i_st_vertex_connectivity_undirected)
	(igraph_st_vertex_connectivity,	igraph_i_vertex_connectivity_directed)
	(igraph_i_vertex_connectivity_undirected, igraph_st_edge_connectivity)
	(igraph_edge_connectivity, igraph_edge_disjoint_paths)
	(igraph_vertex_disjoint_paths, igraph_adhesion, igraph_cohesion): added
	(igraph_maxflow, igraph_edge_connectivity_pair)
	(igraph_edge_connectivity, igraph_vertex_connectivity_pair)