@@ -662,7 +662,7 @@ int igraph_reciprocity(const igraph_t *graph, igraph_real_t *res,
 		       igraph_bool_t ignore_loops);
 
 int igraph_constraint(const igraph_t *graph, igraph_vector_t *res,
-		      igraph_vs_t vids);
+		      igraph_vs_t vids, const igraph_vector_t *weights);
 int igraph_maxdegree(const igraph_t *graph, igraph_integer_t *res,
 		     igraph_vs_t vids, igraph_neimode_t mode, 
 		     igraph_bool_t loops);
